[package]
name = "zenix"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
x86_64 = { version = "0.15.2", features = ["instructions"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
# https://github.com/rust-osdev/bootimage#configuration
